--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <title>Speter portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+</head>
+<header class="header">
+    <a href="#" class="logo">SPETER</a>
+    <nav class="navbar">
+        <ul class="link">
+           <a href="#"style="--i:1;" class="active">Home</a></li>
+           <a href="#"style="--i:2;">About</a>
+           <a href="#"style="--i:3;">Skills</a>
+           <a href="#"style="--i:3;">Portfolio</a>
+           <a href="#"style="--i:5;">Contact </a>
+         </ul>
+    </nav>
+</header>
+<body>  
+    <div class="content">
+        <div id="imagecontainer"></div>
+        <div class="left-container">
+            <div class="card">
+            <div class="h1">
+                <h1>Szia, <span>SPETI</span> vagyok!</h1>
+            </div>
+            <div class="h3">
+                <h3>Frontend fejlesztő!</h3>
+            </div>
+            <section>
+            <div class="social">
+                <div class="fb"><a href="#"><i class='bx bxl-facebook'></i></a></div>
+                <div class="insta"><a href="#"><i class='bx bxl-instagram' ></i></a></div>
+                <div class="tiktok"><a href="#"><i class='bx bxl-tiktok' ></i></a></div>
+            </div>
+            </section>
+            <div class="btn">
+                <a href="www.speter.hu">Hire me</a>
+            </div>
+        </div>
+        <div class="right-container">
+          <div class="img">
+            <img src="assets/homeself.png" alt="">
+          </div>  
+
+        </div>
+</body>
+</html>
