--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1>Szia, <span>SPETI</span> vagyok!</h1>
             </div>
             <div class="h3">
-                <h3>Van akkor mellbimbód, mint egy káddugó?</h3>
+                <h3>Van akkora mellbimbód, mint egy káddugó?</h3>
             </div>
             <section>
             <div class="social">
