--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           <li><a href="contact">contact</a> 
 </div>
 </header>
-<body>  
+<body>
+    <div class="first_block">
     <div class="content">
         <div class="left-container">
             <div class="card">
@@ -54,13 +55,18 @@
         </div>
     </div>
 
-        <div class="right-container">
-            
+        <div class="right-container"> 
           <div class="img">
             <img src="assets/homeself.png" alt="">
           </div>  
         </div>
     </div>
+    <section>
+    <div class="second_block">
+    </div>
+    </section>
+</div>
+</section>
     <script>
         const toggleBtn = document.querySelector('.toggle_btn')
         const toggleBtnIcon = document.querySelector('.toggle_btn i')
