--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         </div>
     </div>
 </div>
-
+<div class="masodik-blokk">
+</div>
     <script>
         const toggleBtn = document.querySelector('.toggle_btn')
         const toggleBtnIcon = document.querySelector('.toggle_btn i')
