--- a/index.html
+++ b/index.html
@@ -59,10 +59,16 @@
 
     <section class="second-block">
         <div class="second-text">
-          <h2>Nem, nincs akkora még</h2>
+          <h2>Nem, nincs <span class="second-text-span">akkora</span> még!</h2>
           <p>De már ivarérett vagyok adipisicing elit. Delectus aspernatur labore sunt eos cum dolores neque perferendis quasi velit itaque, aliquid, repudiandae incidunt error, consequuntur quas placeat libero. Dolorem, porro?</p>
         </div>
-    </section>    
+    </section>  
+    <section class="third-block">
+        <div class="third-text">
+          <h2 class="third-h2">Gyere, hallgasd meg a kedvenc zeném</h2>
+          <p>Ez a kedvenc zeném helye</p>
+        </div>
+    </section>  
 
 
     <script>
