--- a/index.html
+++ b/index.html
@@ -65,8 +65,62 @@
     </section>  
     <section class="third-block">
         <div class="third-text">
-          <h2 class="third-h2">Gyere, hallgasd meg a kedvenc zeném</h2>
-          <p>Ez a kedvenc zeném helye</p>
+          <h2 class="third-h2">Gyere, hallgasd meg <br> a<span class="second-text-span"> kedvenc </span>zenéim!</h2>
+          <div class="boxes">
+          <div class="box">
+            <div>
+                <img src="assets/tomodell.jpg" class="tomodell" alt="">
+            </div>    
+          <p class="musictext">Tom Odell</p>
+          <div class="musictitlebox">
+            <p class="musictitle">Another Love</p>
+            <p class="time">4:40</p>
+        </div>
+          <hr class="line"></hr>
+          <div class="kiskep">
+          <img src="assets/tomodell.jpg" alt="" class="kiskep">
+                          <div>
+                <p class="subtitle"><b>Tom Odell</b> · 2013 · 
+                    15 dal, 51 perc</p>
+                </div>
+        </div>
+        </div>
+        <div class="box">
+            <div>
+                <img src="assets/solstafir.jpg" class="tomodell" alt="">
+            </div>
+            <p class="musictext">Sólstafir</p>
+            <div class="musictitlebox">
+                <p class="musictitle">Fjara</p>
+                <p class="time">6:39</p>
+            </div>
+            <hr class="line"></hr>
+            <div class="kiskep">
+                <img src="assets/solstafir.jpg" alt="" class="kiskep">
+                <div>
+                <p class="subtitle"><b>Sólstafir</b> · 2014 · 
+                    8 dal, 57 perc</p>
+                </div>
+              </div>
+        </div>
+        <div class="box">
+            <div>
+                <img src="assets/dij.webp" class="tomodell" alt="">
+            </div>
+            <p class="musictext">Death in June</p>
+            <div class="musictitlebox">
+                <p class="musictitle">Fall apart</p>
+                <p class="time">2:26</p>
+            </div>            <hr class="line"></hr>
+            <div class="kiskep">
+                <img src="assets/dij.png" alt="" class="kiskep">
+                <div>
+                    <p class="subtitle"><b>Death in June</b> · 1990 · 
+                        9 dal, 42 perc</p>
+                    </div>
+              </div>
+        </div>
+        </div>
         </div>
     </section>  
 
