--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="boxes">
           <div class="box">
             <div>
-                <a href="https://open.spotify.com/track/3JvKfv6T31zO0ini8iNItO?si=b36fcafaa1764c3d"><img src="assets/tomodell.jpg" class="tomodell" alt=""></a>
+                <a target="_blank" href="https://open.spotify.com/track/3JvKfv6T31zO0ini8iNItO?si=b36fcafaa1764c3d"><img src="assets/tomodell.jpg" class="tomodell" alt=""></a>
             </div>    
           <p class="musictext">Tom Odell</p>
           <div class="musictitlebox">
@@ -87,7 +87,7 @@
         </div>
         <div class="box">
             <div>
-                <a href="https://open.spotify.com/track/6Lo1WLiGG9asMjrkjxlfSI?si=c87f3567abb242bb"><img src="assets/solstafir.jpg" class="tomodell" alt=""></a>
+                <a target="_blank" href="https://open.spotify.com/track/6Lo1WLiGG9asMjrkjxlfSI?si=c87f3567abb242bb"><img src="assets/solstafir.jpg" class="tomodell" alt=""></a>
             </div>
             <p class="musictext">Sólstafir</p>
             <div class="musictitlebox">
@@ -105,7 +105,7 @@
         </div>
         <div class="box">
             <div>
-                <a href="https://open.spotify.com/track/0GhaphRnZuRpV9Uq4bEAvh?si=a8da181521d54024"><img src="assets/dij.webp" class="tomodell" alt=""></a>
+                <a target="_blank" href="https://open.spotify.com/track/0GhaphRnZuRpV9Uq4bEAvh?si=a8da181521d54024"><img src="assets/dij.webp" class="tomodell" alt=""></a>
             </div>
             <p class="musictext">Death in June</p>
             <div class="musictitlebox">
