--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <section class="second-block">
         <div class="second-text">
           <h2>Nem, nincs <span class="second-text-span">akkora</span> még!</h2>
+          <center><hr class="first-hr"></center>
           <p>De már ivarérett vagyok adipisicing elit. Delectus aspernatur labore sunt eos cum dolores neque perferendis quasi velit itaque, aliquid, repudiandae incidunt error, consequuntur quas placeat libero. Dolorem, porro?</p>
         </div>
     </section>  
