--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Speter portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
+
 
 </head>
 <body>
 <header class="header">
-    <a href="#" class="logo">SPETER</a>
+    <span class="logo">SPETER</span>
     <nav class="navbar">
         <ul class="link">
            <a href="#" class="active">Home</a></li>
@@ -37,7 +40,7 @@
         <div class="left-container">
             <div class="card">
             <div class="h1">
-                <h1>Szia, <span>SPETI</span> vagyok!</h1>
+                <h1>Szia, <span class="speti">SPETI</span> vagyok!</h1>
             </div>        
             <h3>Van akkora mellbimbód, mint egy káddugó?</h3>     
             <section>
@@ -52,80 +55,92 @@
             </div>
         </div>
     </div>
-        <div class="right-container"> 
+    
+        <div class="right-container" >
         </div>
     </div>
+    <div class="" id="scrolling" style="overflow:auto; height: auto; margin-top: -600px; z-index: -11; opacity: 0.5;">
+    <img src="assets/hatter.png" alt="" id="hatter-image">
+</div>
     </section>
-
     <section class="second-block">
         <div class="second-text">
           <h2>Nem, nincs <span class="second-text-span">akkora</span> még!</h2>
           <center><hr class="first-hr"></center>
-          <p>De már ivarérett vagyok adipisicing elit. Delectus aspernatur labore sunt eos cum dolores neque perferendis quasi velit itaque, aliquid, repudiandae incidunt error, consequuntur quas placeat libero. Dolorem, porro?</p>
+          <div class="second-p">
+          <p class="second-p">De már ivarérett vagyok adipisicing elit. Delectus aspernatur labore sunt eos cum dolores neque perferendis quasi velit itaque, aliquid, repudiandae incidunt error, consequuntur quas placeat libero. Dolorem, porro?</p></div>
         </div>
     </section>  
     <section class="third-block">
         <div class="third-text">
-          <h2 class="third-h2">Gyere, hallgasd meg <br> a<span class="second-text-span"> kedvenc </span>zenéim!</h2>
+          <h2 class="third-h2">Gyere, hallgasd meg <br> a<span class="second-text-span"> kedvenc </span>zenéimet!</h2></div>
+
           <div class="boxes">
           <div class="box">
             <div>
                 <a target="_blank" href="https://open.spotify.com/track/3JvKfv6T31zO0ini8iNItO?si=b36fcafaa1764c3d"><img src="assets/tomodell.jpg" class="tomodell" alt=""></a>
-            </div>    
+            </div>  
+            <div class="music-data"> 
           <p class="musictext">Tom Odell</p>
           <div class="musictitlebox">
             <p class="musictitle">Another Love</p>
             <p class="time">4:40</p>
         </div>
           <hr class="line"></hr>
-          <div class="kiskep">
-          <img src="assets/tomodell.jpg" alt="" class="kiskep">
-                          <div>
-                <p class="subtitle"><b>Tom Odell</b> · 2013 · 
-                    15 dal, 51 perc</p>
-                </div>
+          <div class="pic-sub">
+          <div class="kiskep-block">
+             <img src="assets/tomodell.jpg" alt="" class="kiskep">
+            </div> 
+          <div class="subtitle">
+                <p><b>Tom Odell</b> · 2013 · 15 dal, 51 perc</p>
+          </div>
+        </div>  
         </div>
         </div>
         <div class="box">
             <div>
                 <a target="_blank" href="https://open.spotify.com/track/6Lo1WLiGG9asMjrkjxlfSI?si=c87f3567abb242bb"><img src="assets/solstafir.jpg" class="tomodell" alt=""></a>
             </div>
-            <p class="musictext">Sólstafir</p>
-            <div class="musictitlebox">
-                <p class="musictitle">Fjara</p>
-                <p class="time">6:39</p>
-            </div>
-            <hr class="line"></hr>
-            <div class="kiskep">
-                <img src="assets/solstafir.jpg" alt="" class="kiskep">
-                <div>
-                <p class="subtitle"><b>Sólstafir</b> · 2014 · 
-                    8 dal, 57 perc</p>
+            <div class="music-data"> 
+                <p class="musictext">Tom Odell</p>
+                <div class="musictitlebox">
+                  <p class="musictitle">Another Love</p>
+                  <p class="time">4:40</p>
+              </div>
+                <hr class="line"></hr>
+                <div class="pic-sub">
+                <div class="kiskep-block">
+                   <img src="assets/tomodell.jpg" alt="" class="kiskep">
+                  </div> 
+                <div class="subtitle">
+                      <p><b>Tom Odell</b> · 2013 · 15 dal, 51 perc</p>
                 </div>
+              </div>  
               </div>
         </div>
         <div class="box">
             <div>
                 <a target="_blank" href="https://open.spotify.com/track/0GhaphRnZuRpV9Uq4bEAvh?si=a8da181521d54024"><img src="assets/dij.webp" class="tomodell" alt=""></a>
             </div>
-            <p class="musictext">Death in June</p>
-            <div class="musictitlebox">
-                <p class="musictitle">Fall apart</p>
-                <p class="time">2:26</p>
-            </div>            <hr class="line"></hr>
-            <div class="kiskep">
-                <img src="assets/dij.png" alt="" class="kiskep">
-                <div>
-                    <p class="subtitle"><b>Death in June</b> · 1990 · 
-                        9 dal, 42 perc</p>
-                    </div>
+            <div class="music-data"> 
+                <p class="musictext">Tom Odell</p>
+                <div class="musictitlebox">
+                  <p class="musictitle">Another Love</p>
+                  <p class="time">4:40</p>
+              </div>
+                <hr class="line"></hr>
+                <div class="pic-sub">
+                <div class="kiskep-block">
+                   <img src="assets/tomodell.jpg" alt="" class="kiskep">
+                  </div> 
+                <div class="subtitle">
+                      <p><b>Tom Odell</b> · 2013 · 15 dal, 51 perc</p>
+                </div>
+              </div>  
               </div>
         </div>
         </div>
-        </div>
-
-    </section>  
-
+    </section>
 
     <script>
         const toggleBtn = document.querySelector('.toggle_btn')
@@ -139,8 +154,18 @@
              toggleBtnIcon.classList =  isOpen
              ? 'fa-solid fa-xmark'
              : 'fa-solid fa-bars'
-        }
-    </script> 
+        } 
+
+        window.addEventListener('scroll', function() {
+    let hatterImage = document.getElementById('hatter-image');
+    let value = window.scrollY;
+    hatterImage.style.transform = 'translateX(' + (-value) + 'px)';
+});
+    </script>
+
+
+
+ 
     </main>
 </body>
 </html>
